--- a/helper/base.html
+++ b/helper/base.html
@@ -43,8 +43,8 @@
     <h1>关于文库</h1>
     <article>
         <h2>一、文库简介：</h2>
-        <p>【版本一】为了适应您的学习需求，九九打印特地为您设立校园文库这一板块。资料内容涵盖所有学科所有专业，是一个大型资料库。无论您来自哪所高校哪个专业，无论您是需要复习资料还是专业课件，在这里我们都为您提供最快捷最准确的服务。
-            <br/> 【版本二】校园文库即是所有与高校相关的复习资料、课件、参考文献等文档聚集在一起的平台，文档内容精确定位于高校，用户可以自主分享上传、检索打印。不管是复习、学习课件还是毕业论文，在这里，您总能快速找到准确且专业的资料。
+        <p>
+            <br/>校园文库即是所有与高校相关的复习资料、课件、参考文献等文档聚集在一起的平台，文档内容精确定位于高校，用户可以自主分享上传、检索打印。不管是复习、学习课件还是毕业论文，在这里，您总能快速找到准确且专业的资料。
         </p>
         <h2>二、使用说明：</h2>
         <p>【隐私保护】
