--- a/helper/base.html
+++ b/helper/base.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <title>九九打印</title>
-   <link rel="stylesheet" type="text/css" href="./styles/dist.css">
+   <link rel="stylesheet" type="text/css" href="../styles/dist.css">
 </head>
 
 <body>
 <div class="header">
         <div class="setWidth">
             <a class="logo" href="#">
-                <img class="logo-print" src="./img/logo.png" alt="logo" />
+                <img class="logo-print" src="../img/logo.png" alt="logo" />
                 <span>久久打印</span>
             </a>
             <a href="http://www.99dayin.com" class="titles">
