--- a/helper/followUs.html
+++ b/helper/followUs.html
@@ -12,7 +12,7 @@
         <div class="setWidth">
 
             <a class="logo"href="http://www.99dayin.com">
-                <img class="logo-print" src="./img/logo.png" alt="logo" />
+                <img class="logo-print" src="../img/logo.png" alt="logo" />
 
                 <span>久久打印</span>
             </a>
