--- a/helper/orderServe.html
+++ b/helper/orderServe.html
@@ -10,10 +10,8 @@
 <body>
 <div class="header">
         <div class="setWidth">
-
             <a class="logo"href="http://www.99dayin.com" >
-                <img class="logo-print" src="./img/logo.png" alt="logo" />
-
+                <img class="logo-print" src="../img/logo.png" alt="logo" />
                 <span>久久打印</span>
             </a>
             <a href="http://www.99dayin.com" class="titles">
