--- a/helper/base.html
+++ b/helper/base.html
@@ -11,16 +11,13 @@
 <body>
 <div class="header">
         <div class="setWidth">
-
-            <a class="logo" href="http://www.99dayin.com" >
+            <a class="logo"href="http://www.99dayin.com" >
                 <img class="logo-print" src="../img/logo.png" alt="logo" />
-
-                <span>久久打印</span>
+                <span>九九打印</span>
             </a>
             <a href="http://www.99dayin.com" class="titles">
                 <div class="title-btn homepage-btn" data-content="首页">首页</div>
                 <div class="title-btn introduction" data-content="简介">简介</div>
-                <div class="title-btn art-base" data-content="本校文库">本校文库</div>
                 <div class="title-btn">
                     <span class="login" id="login" data-content="登录">登录</span><span>|</span><span class="signin" id="signin" data-content="注册">注册</span>
                 </div>
